<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/photoCameraButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_border_white"
        android:paddingHorizontal="32dp"
        android:paddingVertical="24dp"
        android:text="@string/session_capture_photo"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/videoCameraButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_border_white"
        android:paddingHorizontal="32dp"
        android:paddingVertical="24dp"
        android:text="@string/session_capture_video"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoCameraButton" />

    <Button
        android:id="@+id/photoLibraryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingHorizontal="32dp"
        android:paddingVertical="24dp"
        android:text="@string/session_photo_library"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoCameraButton" />
</androidx.constraintlayout.widget.ConstraintLayout>