<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.reach_android.ui.hello.HelloViewModel" />
    </data>

    <com.reach_android.ui.views.HeaderView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_user"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceDisplaySmall"
            android:textColor="?attr/colorSecondary"
            app:layout_constraintBottom_toTopOf="@id/loginSubtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/hello_user" />

        <TextView
            android:id="@+id/loginSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha=".75"
            android:text="@string/get_started_with_reach_by_cygnus"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintBottom_toTopOf="@id/spacer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

        <Space
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/img_connect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/img_connect"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginVertical="60dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/btn_connect_to_a_device"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginSubtitle"
            app:srcCompat="@drawable/ic_screenshare_illustration" />

        <Button
            android:id="@+id/btn_connect_to_a_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:onClick="@{vm::connectToDevice}"
            android:text="@string/connect_to_a_device"
            android:textColor="@color/btn_orange_txt"
            app:layout_constraintBottom_toTopOf="@id/btn_continue" />

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="@{vm::startSupportSession}"
            android:text="@string/start_a_support_session"
            android:textColor="@color/btn_orange_txt"
            app:layout_constraintBottom_toBottomOf="parent" />

    </com.reach_android.ui.views.HeaderView>
</layout>