<?xml version="1.0" encoding="utf-8"?>
<com.reach_android.ui.views.SupportView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:buttonIcon="@drawable/ic_nav_video_share_24"
    app:buttonText="Share Your Screen"
    app:title="Screen Share"
    app:alternateButtonText="End Screen Sharing">

    <ViewSwitcher
        android:id="@+id/screenShareViewSwitcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/screenPlaceholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_videoshare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:scaleType="center"
                app:layout_constraintBottom_toTopOf="@+id/lbl_share_desc_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/ic_screenshare_illustration" />

            <TextView
                android:id="@+id/lbl_share_desc_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_your_screen"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/lbl_share_desc_text"
                app:layout_constraintTop_toBottomOf="@+id/img_videoshare" />

            <TextView
                android:id="@+id/lbl_share_desc_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/screen_share_instructions"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_share_desc_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/screen_share_active"
                android:textSize="16sp"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ViewSwitcher>
</com.reach_android.ui.views.SupportView>