<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/deviceInfoLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/remoteSupportButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressBar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/selected_device_loading"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progressBar2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/remoteSupportButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/deviceDataList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_device_data" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <Button
            android:id="@+id/remoteSupportButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/selected_device_remote_support"
            android:textColor="@color/btn_orange_txt"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/characteristicWriteDialog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#4D000000"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/write_characteristic_background"
            android:elevation="50dp"
            android:orientation="vertical"
            android:paddingTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.43">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="16dp"
                android:text="@string/selected_device_write_characteristic"
                android:textAlignment="center"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/characteristicHexValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/edit_text_background"
                android:digits="0123456789ABCDEF"
                android:ems="10"
                android:hint="@string/selected_device_write_hint"
                android:inputType="textCapCharacters"
                android:padding="4dp"
                android:textSize="14sp" />

            <ProgressBar
                android:id="@+id/characteristicWriteLoading"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/characteristicWriteButtons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/writeCancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/roboto_medium"
                    android:minHeight="35dp"
                    android:text="@string/cancel"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/writeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/roboto"
                    android:minHeight="35dp"
                    android:text="@string/selected_device_write"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>